crates/htui/tests/snapshots/templates__agent_help_asking.snap
---
source: crates/htui/tests/templates.rs
expression: frame
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
 Skills │ Templates
┌ implement · editing from v1, saves v2 ─────────────────────┐┌ phase placeholders ────────────────┐
│You are running the `implement` phase for {{item_key}}, atte││{{item_key}} scalar                 │
│                                                            ││{{item_title}} scalar               │
│{{item}}                                                    ││{{item_kind}} scalar                │
│{{documents}}                                               ││{{phase}} scalar                    │
│{{verify_failure}}                                          ││{{output_kind}} scalar              │
│{{previous_diff}}                                           ││{{attempt}} scalar                  │
│{{upstream}}                                                ││{{item}} section                    │
│{{box}}                                                     ││{{documents}} section               │
│{{skills}}                                                  ││{{upstream}} section                │
│{{excerpts}}                                                ││{{box}} section                     │
│{{command_queue}}                                           ││{{skills}} section                  │
│                                                            ││{{excerpts}} section                │
│Make the change the plan describes, in this working tree. Ke││{{verify_failure}} section          │
│When a prior attempt is shown above, read its diff and its v││{{previous_diff}} section           │
│cause rather than the symptom. Write a `{{output_kind}}` doc││{{command_queue}} section           │
│you verified it, one section per file group.                ││                                    │
│                                                            ││                                    │
│                                                            ││                                    │
└────────────────────────────────────────────────────────────┘│                                    │
┌ ask an agent ──────────────────────────────────────────────┐│                                    │
│ask: shorter                                                ││                                    │
│agent: scripted                                             ││                                    │
└────────────────────────────────────────────────────────────┘└────────────────────────────────────┘

 Enter ask · Up/Down agent · Esc back
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces · Ctrl+f find
