crates/htui/tests/snapshots/templates__browse.snap
---
source: crates/htui/tests/templates.rs
expression: frame
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
 Skills │ Templates
┌ Templates ───────────────────┐┌ implement v1 (head v1) ──────────────────────────────────────────┐
│vulkan-tutorials              ││You are running the `implement` phase for {{item_key}}, attempt   │
│  fix           v1   phase    ││{{attempt}}.                                                      │
│  handoff       v1   handoff  ││                                                                  │
│  implement     v1   phase    ││{{item}}                                                          │
│  judge         v1   judge    ││{{documents}}                                                     │
│  plan          v1   phase    ││{{verify_failure}}                                                │
│  prd           v1   phase    ││{{previous_diff}}                                                 │
│  reproduce     v1   phase    ││{{upstream}}                                                      │
│  research      v1   phase    ││{{box}}                                                           │
│  review        v1   phase    ││{{skills}}                                                        │
│  verdict       v1   phase    ││{{excerpts}}                                                      │
│                              ││{{command_queue}}                                                 │
│                              ││                                                                  │
│                              ││Make the change the plan describes, in this working tree. Keep the│
│                              ││diff to what the plan asks for.                                   │
│                              ││When a prior attempt is shown above, read its diff and its        │
│                              ││verification output first and fix the                             │
│                              ││cause rather than the symptom. Write a `{{output_kind}}` document │
│                              ││describing what changed and how                                   │
│                              ││you verified it, one section per file group.                      │
│                              ││                                                                  │
│                              ││                                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘

 j/k move  ,/. version  b base  d diff  D default  e edit  E $EDITOR  n new  r reload  h/l view
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces · Ctrl+f find
