crates/htui/tests/snapshots/templates__missing_item_confirm.snap
---
source: crates/htui/tests/templates.rs
expression: frame
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
 Skills │ Templates
┌ triage · new, saves v1 ────────────────────────────────────┐┌ phase placeholders ────────────────┐
│Triage {{item_key}}                                         ││{{item_key}} scalar                 │
│                                                            ││{{item_title}} scalar               │
│                                                            ││{{item_kind}} scalar                │
│                                                            ││{{phase}} scalar                    │
│                                                            ││{{output_kind}} scalar              │
│                                                            ││{{attempt}} scalar                  │
│                                                            ││{{item}} section                    │
│                                                            ││{{documents}} section               │
│                                                            ││{{upstream}} section                │
│                                                            ││{{box}} section                     │
│                                                            ││{{skills}} section                  │
│                                                            ││{{excerpts}} section                │
│                                                            ││{{verify_failure}} section          │
│                                                            ││{{previous_diff}} section           │
│                                                            ││{{command_queue}} section           │
│                                                            ││                                    │
│                                                            ││                                    │
│                                                            ││                                    │
│                                                            ││                                    │
│                                                            ││                                    │
│                                                            ││                                    │
│                                                            ││                                    │
└────────────────────────────────────────────────────────────┘└────────────────────────────────────┘
 this phase template never places {{item}} — Ctrl+S again saves anyway
 Ctrl+S save  Ctrl+G ask agent  Ctrl+E $EDITOR  Esc cancel  L1:C20
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces · Ctrl+f find
